# txtools_recoded_py

./: .gitignore  LICENSE  Makefile  README.md  RUNNING.md  pyproject.toml
conda/: environment.yml
src/txtools/: __init__.py  __main__.py  api.py  cli.py  core.py  io.py  iupac.py  metrics.py  tables.py
tests/: conftest.py  test_core.py  test_metrics.py
validation/: compare_report.py  mem_diag.py  run_R_timed.R  run_R_txtools.R  run_py_timed.py
validation/txlib/txtools/: DESCRIPTION  INDEX  NAMESPACE  NEWS.md
validation/txlib/txtools/Meta/: Rd.rds  data.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
validation/txlib/txtools/R/: txtools.rdb  txtools.rdx
validation/txlib/txtools/data/: Rdata.rds  Rdata.rdx
validation/txlib/txtools/help/: AnIndex  aliases.rds  paths.rds  txtools.rdb  txtools.rdx
